[package]
name = "ff-history-page"
version = "0.1.0"
authors = ["Eric Rochester <eric.rochester@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.7"
clap = "2.33.0"
diesel = { version = "1.4.2", features = ["sqlite", "extras"] }
dotenv = "0.14.1"
typed-html = "0.2.1"
